[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/GB STUDIO UI ASSET PACK - WYATT199X/frames/DARK BG/dark frame 03.png" type="Texture" id=1]
[ext_resource path="res://Assets/TileShader.tres" type="Shader" id=2]
[ext_resource path="res://Assets/Fonts/dogica.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/DialogBox.gd" type="Script" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/VectorUniform = Vector3( 0, 5, 0 )

[sub_resource type="DynamicFont" id=2]
size = 12
extra_spacing_bottom = 7
extra_spacing_char = -2
font_data = ExtResource( 3 )

[node name="DialogueBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -135.0
margin_right = -768.0
margin_bottom = -600.0
rect_scale = Vector2( 1.21895, 1 )
rect_pivot_offset = Vector2( 256.086, 131.107 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueFrame" type="NinePatchRect" parent="."]
material = SubResource( 1 )
margin_left = -0.0406799
margin_right = 512.0
margin_bottom = 135.0
texture = ExtResource( 1 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="Label" parent="DialogueFrame"]
margin_left = 15.0407
margin_top = 25.0
margin_right = 497.041
margin_bottom = 120.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameFrame" type="NinePatchRect" parent="."]
material = SubResource( 1 )
margin_left = 14.0
margin_top = -21.0
margin_right = 139.0
margin_bottom = 16.0
rect_clip_content = true
size_flags_horizontal = 9
texture = ExtResource( 1 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="NameFrame"]
margin_left = 9.19263
margin_top = 13.1181
margin_right = 120.193
margin_bottom = 30.1181
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
